syntax = "proto3";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

service AuthService {
  rpc login(LoginRequest) returns (LoginResponse) {};

}

